--- a/package.json
+++ b/package.json
@@ -3,7 +3,8 @@
   "version": "0.0.0",
   "private": true,
   "scripts": {
-    "start": "node ./bin/www"
+    "start": "node ./bin/www",
+    "dev": "nodemon ./bin/www -e .hbs,.js"
   },
   "dependencies": {
     "cloudinary": "^1.25.1",
@@ -11,6 +12,7 @@
     "debug": "~2.6.9",
     "dotenv": "^9.0.2",
     "express": "~4.16.1",
+    "express-session": "^1.17.1",
     "hbs": "^4.1.2",
     "http-errors": "~1.6.3",
     "jade": "^1.9.2",
