--- a/package.json
+++ b/package.json
@@ -7,8 +7,11 @@
     "dev": "nodemon ./bin/www -e .hbs,.js"
   },
   "dependencies": {
-    "connect-mongo": "^4.4.1",
+    "bcrypt": "^5.0.1",
+    "bcryptjs": "^2.4.3",
     "cloudinary": "^1.25.1",
+    "connect-flash": "^0.1.1",
+    "connect-mongo": "^4.4.1",
     "cookie-parser": "~1.4.4",
     "debug": "~2.6.9",
     "dotenv": "^9.0.2",
